--- a/src/app/shared/components/sidebar/sidebar.component.html
+++ b/src/app/shared/components/sidebar/sidebar.component.html
@@ -2,7 +2,7 @@
 <hr>
 
 <ul class="list-group">
-  <li routerLink="home"
+  <!-- <li routerLink="home"
     routerLinkActive="active"
     [routerLinkActiveOptions]="{exact: true}"
     class="list-group-item">
@@ -17,6 +17,21 @@
     routerLinkActive="active"
     class="list-group-item">
     contact page
+  </li> -->
+  <li routerLink="countries/by-capital"
+    routerLinkActive="active"
+    class="list-group-item">
+    by capital
+  </li>
+  <li routerLink="countries/by-region"
+    routerLinkActive="active"
+    class="list-group-item">
+    by region
+  </li>
+  <li routerLink="countries/by-country"
+    routerLinkActive="active"
+    class="list-group-item">
+    by country
   </li>
 
 </ul>
