end of basic code, all basic functionallity working

--- a/src/app/countries/pages/by-country-page/by-country-page.component.html
+++ b/src/app/countries/pages/by-country-page/by-country-page.component.html
@@ -1,4 +1,4 @@
-<h2>por capital</h2>
+<h2>por pais</h2>
 <hr>
 
 <div class="row">
@@ -7,7 +7,7 @@
     <!-- search box -->
     <shared-search-box
       (onValue)="searchByCountry($event)"
-      placeholder="Buscar por capital..."
+      placeholder="Buscar por pais..."
     >
     </shared-search-box>
   </div>
