--- a/src/app/countries/components/country-table/country-table.component.html
+++ b/src/app/countries/components/country-table/country-table.component.html
@@ -24,7 +24,7 @@
         <td>{{ country.capital }}</td>
         <td>{{ country.population }}</td>
         <td>
-          <a href="">Ver mas</a>
+          <a [routerLink]=" ['/countries/by', country.cca3]" href="">Ver mas</a>
         </td>
       </tr>
 
