--- a/src/app/countries/pages/by-region-page/by-region-page.component.html
+++ b/src/app/countries/pages/by-region-page/by-region-page.component.html
@@ -1,4 +1,4 @@
-<h2>por capital</h2>
+<h2>por region</h2>
 <hr>
 
 <div class="row">
@@ -7,7 +7,7 @@
     <!-- search box -->
     <shared-search-box
       (onValue)="searchByRegion($event)"
-      placeholder="Buscar por capital..."
+      placeholder="Buscar por region..."
     >
     </shared-search-box>
   </div>
