--- a/src/app/countries/pages/country-page/country-page.component.html
+++ b/src/app/countries/pages/country-page/country-page.component.html
@@ -1,1 +1,37 @@
-<p>country-page works!</p>
+<ng-template #wait>
+  <div class="alert alert-info text-center">
+    espere por favor
+  </div>
+</ng-template>
+
+<div *ngIf="country ; else wait">
+
+  <div class="row">
+    <div class="col-12">
+      <h2>pais:
+        <strong>{{country.name.common}}</strong>
+      </h2>
+      <hr>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-4">
+      <h3>Bandera</h3>
+      <img [src]="country.flags.svg" alt="" class="img-thumbnail">
+    </div>
+    <div class="col">
+      <h3>informacion</h3>
+      <ul class="list-group">
+        <li class="list-group-item">
+          <strong>Poblacion: </strong> {{country.population | number}}
+        </li>
+        <li class="list-group-item">
+          <strong>codigo: </strong> {{country.cca3}}
+        </li>
+      </ul>
+    </div>
+  </div>
+
+
+
+</div>
